--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 VITE_CLERK_PUBLISHABLE_KEY=pk_test_c21vb3RoLWJsdWViaXJkLTM3LmNsZXJrLmFjY291bnRzLmRldiQ
+VITE_CONVEX_URL=https://marvelous-cormorant-342.convex.cloud
+VITE_CLERK_FRONTEND_API_URL=https://smooth-bluebird-37.clerk.accounts.dev
