Update Clerk env variables and type PUBLISHABLE_KEY
Updated .env to add Clerk secret keys and modified the frontend API URL format. Also added an explicit string type assertion for PUBLISHABLE_KEY in main.tsx to ensure type safety.

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 VITE_CLERK_PUBLISHABLE_KEY=pk_test_c21vb3RoLWJsdWViaXJkLTM3LmNsZXJrLmFjY291bnRzLmRldiQ
 VITE_CONVEX_URL=https://marvelous-cormorant-342.convex.cloud
-VITE_CLERK_FRONTEND_API_URL=https://smooth-bluebird-37.clerk.accounts.dev
+VITE_CLERK_FRONTEND_API_URL=smooth-bluebird-37.clerk.accounts.dev
+VITE_CLERK_SECRET_KEY=sk_test_eAmsMJ5m5iyRzQ97mfKfrX8Syb800bJWr6arZRmR4F
+CLERK_SECRET_KEY=sk_test_eAmsMJ5m5iyRzQ97mfKfrX8Syb800bJWr6arZRmR4F
